{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 268,
  "lineage": "86b66218-011e-c9fb-ce65-206f37b12385",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "WebaapProjectIG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328245990239:internet-gateway/igw-06d77c2a14198a64d",
            "id": "igw-06d77c2a14198a64d",
            "owner_id": "328245990239",
            "tags": {
              "Name": "WebaapProjectIG"
            },
            "tags_all": {
              "Name": "WebaapProjectIG"
            },
            "vpc_id": "vpc-0d55d7cfc852c6d41"
          },
          "dependencies": [
            "aws_vpc.WebaapProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "WebaapProjectLBASG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:328245990239:loadbalancer/app/WebaapProjectLBASG/f8cad3f62d6faa94",
            "arn_suffix": "app/WebaapProjectLBASG/f8cad3f62d6faa94",
            "desync_mitigation_mode": "defensive",
            "dns_name": "WebaapProjectLBASG-799502286.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:328245990239:loadbalancer/app/WebaapProjectLBASG/f8cad3f62d6faa94",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "WebaapProjectLBASG",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0852ec50000157728"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0992e0febee0a42e2"
              },
              {
                "subnet_id": "subnet-0bfe767f1fe4266f8"
              }
            ],
            "subnets": [
              "subnet-0992e0febee0a42e2",
              "subnet-0bfe767f1fe4266f8"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0d55d7cfc852c6d41",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.WebaapProjectSG",
            "aws_subnet.WebbappProject_ap-south-1a",
            "aws_subnet.WebbappProject_ap-south-1b",
            "aws_vpc.WebaapProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "WebaapProjectLBListnerASG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:328245990239:listener/app/WebaapProjectLBASG/f8cad3f62d6faa94/c10cf8fca0a4ace0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:328245990239:targetgroup/WebaapProjectLBASG/72d24ef185d40da1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:328245990239:listener/app/WebaapProjectLBASG/f8cad3f62d6faa94/c10cf8fca0a4ace0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:328245990239:loadbalancer/app/WebaapProjectLBASG/f8cad3f62d6faa94",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.WebaapProjectLBASG",
            "aws_lb_target_group.WebaapProjectLBTargetGroupASG",
            "aws_security_group.WebaapProjectSG",
            "aws_subnet.WebbappProject_ap-south-1a",
            "aws_subnet.WebbappProject_ap-south-1b",
            "aws_vpc.WebaapProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "WebaapProjectLBTargetGroupASG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:328245990239:targetgroup/WebaapProjectLBASG/72d24ef185d40da1",
            "arn_suffix": "targetgroup/WebaapProjectLBASG/72d24ef185d40da1",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:328245990239:targetgroup/WebaapProjectLBASG/72d24ef185d40da1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "WebaapProjectLBASG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d55d7cfc852c6d41"
          },
          "dependencies": [
            "aws_vpc.WebaapProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "WebaapProjectRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328245990239:route-table/rtb-03717eb46606d6808",
            "id": "rtb-03717eb46606d6808",
            "owner_id": "328245990239",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06d77c2a14198a64d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "WebaapProjectRT"
            },
            "tags_all": {
              "Name": "WebaapProjectRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d55d7cfc852c6d41"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.WebaapProjectIG",
            "aws_vpc.WebaapProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "WebaapProjectRT_Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328245990239:route-table/rtb-057eee0c48e1f9e1b",
            "id": "rtb-057eee0c48e1f9e1b",
            "owner_id": "328245990239",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "WebaapProjectRT_Private"
            },
            "tags_all": {
              "Name": "WebaapProjectRT_Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d55d7cfc852c6d41"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.WebaapProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "WebaapProjectRTAsso1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0adecc2439da31421",
            "route_table_id": "rtb-03717eb46606d6808",
            "subnet_id": "subnet-0992e0febee0a42e2"
          },
          "dependencies": [
            "aws_internet_gateway.WebaapProjectIG",
            "aws_route_table.WebaapProjectRT",
            "aws_subnet.WebbappProject_ap-south-1a",
            "aws_vpc.WebaapProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "WebaapProjectRTAsso1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a2e860748a9446a",
            "route_table_id": "rtb-03717eb46606d6808",
            "subnet_id": "subnet-0bfe767f1fe4266f8"
          },
          "dependencies": [
            "aws_internet_gateway.WebaapProjectIG",
            "aws_route_table.WebaapProjectRT",
            "aws_subnet.WebbappProject_ap-south-1b",
            "aws_vpc.WebaapProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "WebaapProjectRTAsso1b_Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf909b1356b33dce",
            "route_table_id": "rtb-057eee0c48e1f9e1b",
            "subnet_id": "subnet-0cdea255ce3d48c14"
          },
          "dependencies": [
            "aws_route_table.WebaapProjectRT_Private",
            "aws_subnet.WebbappProject_ap-south-1b_private",
            "aws_vpc.WebaapProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "WebaapProjectSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328245990239:security-group/sg-0852ec50000157728",
            "description": "Allow SS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0852ec50000157728",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow_http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow_ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "328245990239",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WebaapProjectSG"
            },
            "tags_all": {
              "Name": "WebaapProjectSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d55d7cfc852c6d41"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.WebaapProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "WebbappProject_ap-south-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328245990239:subnet/subnet-0992e0febee0a42e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0992e0febee0a42e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "328245990239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "WebbappProject_ap-1a"
            },
            "tags_all": {
              "Name": "WebbappProject_ap-1a"
            },
            "vpc_id": "vpc-0d55d7cfc852c6d41"
          },
          "dependencies": [
            "aws_vpc.WebaapProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "WebbappProject_ap-south-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328245990239:subnet/subnet-0bfe767f1fe4266f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfe767f1fe4266f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "328245990239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "WebbappProject_ap-1b"
            },
            "tags_all": {
              "Name": "WebbappProject_ap-1b"
            },
            "vpc_id": "vpc-0d55d7cfc852c6d41"
          },
          "dependencies": [
            "aws_vpc.WebaapProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "WebbappProject_ap-south-1b_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328245990239:subnet/subnet-0cdea255ce3d48c14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cdea255ce3d48c14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "328245990239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "WebbappProject_ap-1b_private"
            },
            "tags_all": {
              "Name": "WebbappProject_ap-1b_private"
            },
            "vpc_id": "vpc-0d55d7cfc852c6d41"
          },
          "dependencies": [
            "aws_vpc.WebaapProjectVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "WebaapProjectVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328245990239:vpc/vpc-0d55d7cfc852c6d41",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-073ae96a2b32685e6",
            "default_route_table_id": "rtb-07b0bd9c5374ba01e",
            "default_security_group_id": "sg-09d52867c4b2cda74",
            "dhcp_options_id": "dopt-00e6486a36d6a48de",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d55d7cfc852c6d41",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07b0bd9c5374ba01e",
            "owner_id": "328245990239",
            "tags": {
              "Name": "WebaapProjectVPC"
            },
            "tags_all": {
              "Name": "WebaapProjectVPC"
            }
          }
        }
      ]
    }
  ]
}